# robotics-acceptance-harness

./: .git-commit-msg.txt  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  renovate.json  requirements-dev.txt
.github/workflows/: ci.yml  links.yml  release.yml
.semgrep/: attach-only.py  attach-only.yml
docs/: migration-v0.4-v0.5.md  migration-v0.5-v0.6.md
examples/generic/: base.yaml  composition-drop-clock.yaml  composition.yaml  rclpy_clock_publisher.py
examples/generic/overlays/: drop-clock-topics.yaml  short-run.yaml
examples/hydra/: requirements.txt  test_guard_with_hydra.py
examples/hydra/conf/: config.yaml
examples/hydra/conf/scenario/: hardware.yaml  simulation.yaml
examples/launch_testing/: test_clock_graph_ready.py
src/robotics_acceptance_harness/: __init__.py  application.py  authorization.py  cli.py  documents.py  evidence.py  forbidden_graph.py  hardware_timing.py  metrics.py  otel.py  plugin.py  readiness.py  result.py  ros.py  timing.py
src/robotics_simulation_harness/: __init__.py  cli.py  evidence.py  guard.py  launching.py  plugin.py  process.py  registry.py  resolver.py  ros_observer.py  schemas.py  signal_coordinator.py  yaml_io.py
tests/: test_application.py  test_authorization.py  test_cli.py  test_documents.py  test_evidence.py  test_execution_guard.py  test_forbidden_graph.py  test_hardware_timing.py  test_launching.py  test_legacy_import.py  test_metrics.py  test_otel.py  test_plugin.py  test_process.py  test_readiness.py  test_registry.py  test_resolver.py  test_result.py  test_ros.py  test_ros_observer.py  test_safety_boundary.py  test_timing.py
tests/fixtures/: hil.yaml  real-robot.yaml  simulation.yaml
tests/fixtures/physical/: hil-permit.json  hil-runtime.json  hil-scenario.yaml  hil-verification.json
tests/fixtures/simulation/: runtime.yaml  scenario.yaml
tests/fixtures/v2/: runtime.yaml  simulation.yaml
tests/fixtures/v3/: hil-permit.json  hil-runtime.json  hil-scenario.yaml  hil-verification.json  runtime.yaml  simulation.yaml
tests/integration/: test_execution_guard_plugin.py
tests/unit/: test_execution_guard.py
