[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "robotics-simulation-harness"
version = "0.4.0"
description = "Pytest plugin for validated, simulation-only robotics scenarios."
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = "MIT"
dependencies = [
  "pytest>=8,<10",
  "pyyaml>=6.0.2,<7",
  "robotics-runtime-contracts>=0.3,<0.4",
]

[dependency-groups]
dev = [
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "ruff==0.15.21",
  "yamllint==1.38.0",
]

[tool.uv.sources]
robotics-runtime-contracts = { git = "https://github.com/mmkolpakov/robotics-runtime-contracts.git", tag = "v0.3.0" }

[project.entry-points.pytest11]
robotics-simulation-harness = "robotics_simulation_harness.plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
