[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "robotics-acceptance-harness"
version = "0.5.0"
description = "Attach-only acceptance observer for validated robotics executions."
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = "MIT"
dependencies = [
  "junitparser>=5.0.1,<6",
  "opentelemetry-proto==1.43.0",
  "pytest>=8,<10",
  "pyyaml>=6.0.2,<7",
  "robotics-runtime-contracts @ https://github.com/mmkolpakov/robotics-runtime-contracts/releases/download/v0.4.2/robotics_runtime_contracts-0.4.2-py3-none-any.whl",
]

[project.scripts]
robotics-acceptance = "robotics_acceptance_harness.cli:main"

[dependency-groups]
dev = [
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "ruff==0.15.21",
  "yamllint==1.38.0",
]

[project.entry-points.pytest11]
robotics-acceptance-harness = "robotics_acceptance_harness.plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
